<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/great_nav"
        android:icon="@drawable/ic_great"
        app:cnb_textColor = "@color/colorRed"
        android:title="@string/great"/>

    <item
        android:id="@+id/well_nav"
        android:icon="@drawable/ic_well"
        app:cnb_textColor = "@color/colorGreen"
        android:title="@string/bookmark_nav"/>
    <item
        android:id="@+id/medium_nav"
        android:icon="@drawable/ic_medium"
        app:cnb_textColor = "@color/colorBlue"
        android:title="@string/medium"/>
    <item
        android:id="@+id/bad_nav"
        android:icon="@drawable/ic_bad"
        app:cnb_textColor = "@color/colorBlack"
        android:title="@string/bad"/>
</menu>