<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    app:cnb_unselectedColor = "@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/ic_home"
        app:cnb_backgroundColor = "@color/colorPrimaryLight"
        app:cnb_iconColor = "@color/snow_white"
        app:cnb_textColor = "@color/colorWhite"
        android:title="@string/home_nav"/>
    <item
        android:id="@+id/category_nav"
        android:icon="@drawable/ic_category"
        app:cnb_backgroundColor = "@color/colorPrimaryLight"
        app:cnb_iconColor = "@color/snow_white"
        app:cnb_textColor = "@color/colorWhite"
        android:title="@string/category"/>
<!--    <item-->
<!--        android:id="@+id/discover_nav"-->
<!--        android:icon="@drawable/ic_discover"-->
<!--        app:cnb_backgroundColor = "@color/colorPrimaryLight"-->
<!--        app:cnb_iconColor = "@color/snow_white"-->
<!--        app:cnb_textColor = "@color/colorWhite"-->
<!--        android:title="@string/discover"/>-->
    <item
        android:id="@+id/notification_nav"
        android:icon="@drawable/ic_bell"
        app:cnb_backgroundColor = "@color/colorPrimaryLight"
        app:cnb_iconColor = "@color/colorWhite"
        app:cnb_textColor = "@color/colorWhite"
        android:title="@string/notification_nav"/>
    <item
        android:id="@+id/account_nav"
        android:icon="@drawable/ic_person"
        app:cnb_backgroundColor = "@color/colorPrimaryLight"
        app:cnb_iconColor = "@color/colorWhite"
        app:cnb_textColor = "@color/colorWhite"
        android:title="@string/account_nav"/>
</menu>