<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewPlace_id"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/dp_250"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_5"
    app:cardElevation="@dimen/dp_5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_place_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_130"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/name_place_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="@dimen/dp_5"
            android:textStyle="bold"
            android:text="@string/namePlace"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/address_place_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginHorizontal="@dimen/dp_5"
            android:textStyle="bold"
            android:text="@string/address"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/evaluate_place_id"
                android:layout_width="@dimen/dp_30"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textStyle="bold"
                android:text="@string/rate"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/sp_14" />
            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_5"
                android:src="@drawable/ic_yellow_star"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>