<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".category.view.FoodActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back_id"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/name_item_category_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/caviardreams"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/introduce_food"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_30"
        app:cardElevation="@dimen/dp_5">

        <EditText
            android:id="@+id/edt_search_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/colorNull"
            android:drawableStart="@drawable/ic_search_primary_light"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:hint="@string/search"
            android:padding="@dimen/dp_10"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryLight"
            android:textColorHint="@color/colorPrimaryLight"
            tools:ignore="RtlCompat" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10" />


</LinearLayout>