<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_5"
    app:cardElevation="@dimen/dp_3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="ExtraText">

            //Time

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activityTime_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statusPlace"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeO_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/timePlace"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/timeC_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/timePlace"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            //Contact

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_30"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/dp_10"
                    android:background="@drawable/bg_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_10"
                        android:src="@drawable/ic_contacts" />

                    <TextView
                        android:id="@+id/title_contact_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/dp_5"
                        android:gravity="center"
                        android:text="@string/contact"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>