<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <GridLayout
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_letter"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:text="@string/letter_ap"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_invite"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:text="@string/invite_ap"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_settings"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:text="@string/settings_ap"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_logout"
                    android:background="@drawable/ic_logout"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:text="@string/logout_ap"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</RelativeLayout>